<resources>
    <string name="app_name">Iot Emission Test Kit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="fname">Firstname</string>
    <string name="lname">Lastname</string>
    <string name="mnumber">Mobile Number</string>
    <string name="cpass">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="logintext">Login to your Account</string>
    <string name="signtextview">-sign in with-</string>
    <string name="create_your_account">Create your Account</string>
    <string name="or_sign_up_with">-Or sign up with-</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="emission">Emission</string>
    <string name="register_link">Register</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="submit">Submit</string>
    <string name="plate_no">Plate No.</string>
    <string name="engine_no">Engine No.</string>
    <string name="chassis_no">Chassis No.</string>
    <string name="year_model">Year Model</string>
    <string name="make_series">Make/Series</string>
    <string name="mv_type">MV type</string>
    <string name="color">Color</string>
    <string name="classification">Classification</string>
    <string name="emission_test_description">Initiate emission test, detect opacity, viewpass/fail results.</string>
    <string name="history_description">Track, download, view past emission results with timestamps.</string>
    <string name="settings_description">Customize, Configure settings, access helpful documentaion in-app.</string>
    <string name="emission_test">Emission Test</string>
    <string name="opacity">Opacity</string>
    <string name="opacity_value">---</string>
    <string name="result">Result</string>
    <string name="status">Status</string>
    <string name="connected">Connected</string>
    <string name="start_test">Start Test</string>
    <string name="personal_details">Personal Details</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="reports">Report problem</string>
    <string name="download_data">Download Data</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_image">\n</string>
    <string name="account">Account</string>
    <string name="vehicle">Vehicle</string>
    <string name="edit">Edit</string>
</resources>