<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/SignupLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/SignupLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/register_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/signuptextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/create_your_account"
            android:textColor="@color/white"
            android:fontFamily="@font/interbold"
            android:textSize="18sp"
            android:layout_marginStart="16dp"/>

        <LinearLayout
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input"
                android:fontFamily="@font/interreg"
                android:hint="@string/fname"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textSize="12sp"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input"
                android:fontFamily="@font/interreg"
                android:hint="@string/lname"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textSize="12sp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputbox"
            android:fontFamily="@font/interreg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobilenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputbox"
            android:fontFamily="@font/interreg"
            android:hint="@string/mnumber"
            android:inputType="number"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputbox"
            android:fontFamily="@font/interreg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputbox"
            android:fontFamily="@font/interreg"
            android:hint="@string/cpass"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:width="280dp"
            android:background="@drawable/button"
            android:fontFamily="@font/interbold"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>